--- a/filament_left/pubspec.yaml
+++ b/filament_left/pubspec.yaml
@@ -71,7 +71,7 @@ flutter:
     - assets/help-diam.png
     - assets/help-circumference.png
     - assets/v6-model.tflite
-  #   - images/a_dot_ham.jpeg
+    - assets/example.JPG
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
