--- a/filament_left/android/app/src/profile/AndroidManifest.xml
+++ b/filament_left/android/app/src/profile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.filament_left">
+    package="com.masonhorder.filamentleft">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
