--- a/filament_left/pubspec.yaml
+++ b/filament_left/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   path:
   firebase_storage:
   firebase_core: 
+  shared_preferences:
+  after_layout:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -71,8 +73,11 @@ flutter:
   assets:
     - assets/help-diam.png
     - assets/help-circumference.png
-    - assets/v8-model.tflite
+    - assets/v9-model.tflite
     - assets/example.JPG
+    - assets/phone1.png
+    - assets/phone1-arrow.png
+    - assets/phone2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
