--- a/filament_left/pubspec.yaml
+++ b/filament_left/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_core: 
   shared_preferences:
   after_layout:
+  cloud_firestore:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
