--- a/filament_left/pubspec.yaml
+++ b/filament_left/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   shared_preferences:
   after_layout:
   cloud_firestore:
+  flushbar:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
